@@ -23,7 +23,7 @@
             -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true
         </ipv6.server.jvm.args>
         <server.jvm.args>
-            ${jvm.args.other} ${jvm.args.memory} ${jvm.args.byteman} ${jvm.args.debug}
+            ${jvm.args.other} ${jvm.args.memory} ${jvm.args.byteman} ${jvm.args.debug} ${jvm.args.jdk9}
         </server.jvm.args>
     </properties>
 
@@ -166,7 +166,7 @@
         <jdk>[1.9,)</jdk>
       </activation>
       <properties>
-        <jvm.args.jdk9>--add-modules java.xml.ws</jvm.args.jdk9>
+        <jvm.args.jdk9>--add-modules java.xml.ws --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</jvm.args.jdk9>
       </properties>
       <build>
         <plugins>
